--- a/Config.ini
+++ b/Config.ini
@@ -148,36 +148,36 @@ Config_layoutGapWidth=0
 ;Config_hotkey=#+Right::View_setLayoutProperty(GapWidth, 0, +2)
 
 ;; View/Tag management
-;Config_hotkey=#+n::View_toggleMargins()
-;Config_hotkey=#BackSpace::Monitor_activateView(-1)
-;Config_hotkey=#+0::Monitor_setWindowTag(10)
-;Config_hotkey=#1::Monitor_activateView(1)
-;Config_hotkey=#+1::Monitor_setWindowTag(1)
-;Config_hotkey=#^1::Monitor_toggleWindowTag(1)
-;Config_hotkey=#2::Monitor_activateView(2)
-;Config_hotkey=#+2::Monitor_setWindowTag(2)
-;Config_hotkey=#^2::Monitor_toggleWindowTag(2)
-;Config_hotkey=#3::Monitor_activateView(3)
-;Config_hotkey=#+3::Monitor_setWindowTag(3)
-;Config_hotkey=#^3::Monitor_toggleWindowTag(3)
-;Config_hotkey=#4::Monitor_activateView(4)
-;Config_hotkey=#+4::Monitor_setWindowTag(4)
-;Config_hotkey=#^4::Monitor_toggleWindowTag(4)
-;Config_hotkey=#5::Monitor_activateView(5)
-;Config_hotkey=#+5::Monitor_setWindowTag(5)
-;Config_hotkey=#^5::Monitor_toggleWindowTag(5)
-;Config_hotkey=#6::Monitor_activateView(6)
-;Config_hotkey=#+6::Monitor_setWindowTag(6)
-;Config_hotkey=#^6::Monitor_toggleWindowTag(6)
-;Config_hotkey=#7::Monitor_activateView(7)
-;Config_hotkey=#+7::Monitor_setWindowTag(7)
-;Config_hotkey=#^7::Monitor_toggleWindowTag(7)
-;Config_hotkey=#8::Monitor_activateView(8)
-;Config_hotkey=#+8::Monitor_setWindowTag(8)
-;Config_hotkey=#^8::Monitor_toggleWindowTag(8)
-;Config_hotkey=#9::Monitor_activateView(9)
-;Config_hotkey=#+9::Monitor_setWindowTag(9)
-;Config_hotkey=#^9::Monitor_toggleWindowTag(9)
+Config_hotkey=!+n::View_toggleMargins()
+Config_hotkey=!BackSpace::Monitor_activateView(-1)
+Config_hotkey=!+0::Monitor_setWindowTag(10)
+Config_hotkey=!1::Monitor_activateView(1)
+Config_hotkey=!+1::Monitor_setWindowTag(1)
+Config_hotkey=!^1::Monitor_toggleWindowTag(1)
+Config_hotkey=!2::Monitor_activateView(2)
+Config_hotkey=!+2::Monitor_setWindowTag(2)
+Config_hotkey=!^2::Monitor_toggleWindowTag(2)
+Config_hotkey=!3::Monitor_activateView(3)
+Config_hotkey=!+3::Monitor_setWindowTag(3)
+Config_hotkey=!^3::Monitor_toggleWindowTag(3)
+Config_hotkey=!4::Monitor_activateView(4)
+Config_hotkey=!+4::Monitor_setWindowTag(4)
+Config_hotkey=!^4::Monitor_toggleWindowTag(4)
+Config_hotkey=!5::Monitor_activateView(5)
+Config_hotkey=!+5::Monitor_setWindowTag(5)
+Config_hotkey=!^5::Monitor_toggleWindowTag(5)
+Config_hotkey=!6::Monitor_activateView(6)
+Config_hotkey=!+6::Monitor_setWindowTag(6)
+Config_hotkey=!^6::Monitor_toggleWindowTag(6)
+Config_hotkey=!7::Monitor_activateView(7)
+Config_hotkey=!+7::Monitor_setWindowTag(7)
+Config_hotkey=!^7::Monitor_toggleWindowTag(7)
+Config_hotkey=!8::Monitor_activateView(8)
+Config_hotkey=!+8::Monitor_setWindowTag(8)
+Config_hotkey=!^8::Monitor_toggleWindowTag(8)
+Config_hotkey=!9::Monitor_activateView(9)
+Config_hotkey=!+9::Monitor_setWindowTag(9)
+Config_hotkey=!^9::Monitor_toggleWindowTag(9)
 
 ;; Monitor management
 ;Config_hotkey=#.::Manager_activateMonitor(0, +1)
