--- a/Config.ini
+++ b/Config.ini
@@ -129,23 +129,23 @@ Config_layoutGapWidth=0
 ;Config_hotkey=#^d::Debug_setLogLevel(0, -1)
 ;Config_hotkey=#^+d::Debug_setLogLevel(0, +1)
 
-;; Layout management
-;Config_hotkey=#Tab::View_setLayout(-1)
-;Config_hotkey=#f::View_setLayout(3)
-;Config_hotkey=#m::View_setLayout(2)
-;Config_hotkey=#t::View_setLayout(1)
-;Config_hotkey=#Left::View_setLayoutProperty(MFactor, 0, -0.05)
-;Config_hotkey=#Right::View_setLayoutProperty(MFactor, 0, +0.05)
-;Config_hotkey=#^t::View_setLayoutProperty(Axis, 0, +1, 1)
-;Config_hotkey=#^Enter::View_setLayoutProperty(Axis, 0, +2, 1)
-;Config_hotkey=#^Tab::View_setLayoutProperty(Axis, 0, +1, 2)
-;Config_hotkey=#^+Tab::View_setLayoutProperty(Axis, 0, +1, 3)
-;Config_hotkey=#^Up::View_setLayoutProperty(MY, 0, +1)
-;Config_hotkey=#^Down::View_setLayoutProperty(MY, 0, -1)
-;Config_hotkey=#^Right::View_setLayoutProperty(MX, 0, +1)
-;Config_hotkey=#^Left::View_setLayoutProperty(MX, 0, -1)
-;Config_hotkey=#+Left::View_setLayoutProperty(GapWidth, 0, -2)
-;Config_hotkey=#+Right::View_setLayoutProperty(GapWidth, 0, +2)
+; Layout management
+Config_hotkey=!Tab::View_setLayout(-1)
+Config_hotkey=!f::View_setLayout(3)
+Config_hotkey=!m::View_setLayout(2)
+Config_hotkey=!t::View_setLayout(1)
+Config_hotkey=!Left::View_setLayoutProperty(MFactor, 0, -0.05)
+Config_hotkey=!Right::View_setLayoutProperty(MFactor, 0, +0.05)
+Config_hotkey=!^t::View_setLayoutProperty(Axis, 0, +1, 1)
+Config_hotkey=!^Enter::View_setLayoutProperty(Axis, 0, +2, 1)
+Config_hotkey=!^Tab::View_setLayoutProperty(Axis, 0, +1, 2)
+Config_hotkey=!^+Tab::View_setLayoutProperty(Axis, 0, +1, 3)
+Config_hotkey=!^Up::View_setLayoutProperty(MY, 0, +1)
+Config_hotkey=!^Down::View_setLayoutProperty(MY, 0, -1)
+Config_hotkey=!^Right::View_setLayoutProperty(MX, 0, +1)
+Config_hotkey=!^Left::View_setLayoutProperty(MX, 0, -1)
+Config_hotkey=!+Left::View_setLayoutProperty(GapWidth, 0, -2)
+Config_hotkey=!+Right::View_setLayoutProperty(GapWidth, 0, +2)
 
 ;; View/Tag management
 Config_hotkey=!+n::View_toggleMargins()
