Replaced modifier key in window management

--- a/Config.ini
+++ b/Config.ini
@@ -92,21 +92,21 @@ Config_layoutGapWidth=0
 ;Config_autoSaveSession=auto
 ;Config_maintenanceInterval=5000
 
-;; Key definitions
-;; Window management
-;Config_hotkey=#Down::View_activateWindow(0, +1)
-;Config_hotkey=#Up::View_activateWindow(0, -1)
-;Config_hotkey=#+Down::View_shuffleWindow(0, +1)
-;Config_hotkey=#+Up::View_shuffleWindow(0, -1)
-;Config_hotkey=#+Enter::View_shuffleWindow(1)
-;Config_hotkey=#c::Manager_closeWindow()
-;Config_hotkey=#+d::Window_toggleDecor()
-;Config_hotkey=#+f::View_toggleFloatingWindow()
-;Config_hotkey=#+m::Manager_moveWindow()
-;Config_hotkey=#+s::Manager_sizeWindow()
-;Config_hotkey=#+x::Manager_maximizeWindow()
-;Config_hotkey=#i::Manager_getWindowInfo()
-;Config_hotkey=#+i::Manager_getWindowList()
+; Key definitions
+; Window management
+Config_hotkey=!Down::View_activateWindow(0, +1)
+Config_hotkey=!Up::View_activateWindow(0, -1)
+Config_hotkey=!+Down::View_shuffleWindow(0, +1)
+Config_hotkey=!+Up::View_shuffleWindow(0, -1)
+Config_hotkey=!+Enter::View_shuffleWindow(1)
+Config_hotkey=!c::Manager_closeWindow()
+Config_hotkey=!+d::Window_toggleDecor()
+Config_hotkey=!+f::View_toggleFloatingWindow()
+Config_hotkey=!+m::Manager_moveWindow()
+Config_hotkey=!+s::Manager_sizeWindow()
+Config_hotkey=!+x::Manager_maximizeWindow()
+Config_hotkey=!i::Manager_getWindowInfo()
+Config_hotkey=!+i::Manager_getWindowList()
 ;Config_hotkey=!Down::View_moveWindow(0, +1)
 ;Config_hotkey=!Up::View_moveWindow(0, -1)
 ;Config_hotkey=!+Enter::Manager_maximizeWindow()
