Commented alt tab

--- a/Config.ini
+++ b/Config.ini
@@ -130,7 +130,7 @@ Config_hotkey=!+i::Manager_getWindowList()
 ;Config_hotkey=#^+d::Debug_setLogLevel(0, +1)
 
 ; Layout management
-Config_hotkey=!Tab::View_setLayout(-1)
+;Config_hotkey=!Tab::View_setLayout(-1)
 Config_hotkey=!f::View_setLayout(3)
 Config_hotkey=!m::View_setLayout(2)
 Config_hotkey=!t::View_setLayout(1)
