Vim-like shortcuts

--- a/Config.ini
+++ b/Config.ini
@@ -94,10 +94,10 @@ Config_layoutGapWidth=0
 
 ; Key definitions
 ; Window management
-Config_hotkey=!Down::View_activateWindow(0, +1)
-Config_hotkey=!Up::View_activateWindow(0, -1)
-Config_hotkey=!+Down::View_shuffleWindow(0, +1)
-Config_hotkey=!+Up::View_shuffleWindow(0, -1)
+Config_hotkey=!^j::View_activateWindow(0, +1)
+Config_hotkey=!^k::View_activateWindow(0, -1)
+Config_hotkey=!^+j::View_shuffleWindow(0, +1)
+Config_hotkey=!^+k::View_shuffleWindow(0, -1)
 Config_hotkey=!+Enter::View_shuffleWindow(1)
 Config_hotkey=!c::Manager_closeWindow()
 Config_hotkey=!+d::Window_toggleDecor()
@@ -134,8 +134,8 @@ Config_hotkey=!+i::Manager_getWindowList()
 Config_hotkey=!f::View_setLayout(3)
 Config_hotkey=!m::View_setLayout(2)
 Config_hotkey=!t::View_setLayout(1)
-Config_hotkey=!Left::View_setLayoutProperty(MFactor, 0, -0.05)
-Config_hotkey=!Right::View_setLayoutProperty(MFactor, 0, +0.05)
+Config_hotkey=!h::View_setLayoutProperty(MFactor, 0, -0.05)
+Config_hotkey=!l::View_setLayoutProperty(MFactor, 0, +0.05)
 Config_hotkey=!^t::View_setLayoutProperty(Axis, 0, +1, 1)
 Config_hotkey=!^Enter::View_setLayoutProperty(Axis, 0, +2, 1)
 Config_hotkey=!^Tab::View_setLayoutProperty(Axis, 0, +1, 2)
@@ -197,6 +197,6 @@ Config_hotkey=!^9::Monitor_toggleWindowTag(9)
 ;; Administration
 ;Config_hotkey=#^e::Run, edit Config.ini
 ;Config_hotkey=#^s::Config_UI_saveSession()
-;Config_hotkey=#^r::Main_reload()
-Config_hotkey=#^+r::Reload
+Config_hotkey=!^r::Main_reload()
+Config_hotkey=!^+r::Reload
 ;Config_hotkey=#^q::ExitApp
