--- a/Config.ini
+++ b/Config.ini
@@ -104,7 +104,8 @@ Config_hotkey=!+d::Window_toggleDecor()
 Config_hotkey=!+f::View_toggleFloatingWindow()
 Config_hotkey=!+m::Manager_moveWindow()
 Config_hotkey=!+s::Manager_sizeWindow()
-Config_hotkey=!+x::Manager_maximizeWindow()
+Config_hotkey=!^x::Manager_maximizeWindow()
+Config_hotkey=!^m::Manager_minimizeWindow()
 Config_hotkey=!i::Manager_getWindowInfo()
 Config_hotkey=!+i::Manager_getWindowList()
 ;Config_hotkey=!Down::View_moveWindow(0, +1)
