Shortcuts for switching between layouts

--- a/Config.ini
+++ b/Config.ini
@@ -101,8 +101,8 @@ Config_hotkey=!^+k::View_shuffleWindow(0, -1)
 Config_hotkey=!+Enter::View_shuffleWindow(1)
 Config_hotkey=!c::Manager_closeWindow()
 Config_hotkey=!+d::Window_toggleDecor()
-Config_hotkey=!+f::View_toggleFloatingWindow()
-Config_hotkey=!+m::Manager_moveWindow()
+;Config_hotkey=!+f::View_toggleFloatingWindow()
+;Config_hotkey=!+m::Manager_moveWindow()
 Config_hotkey=!+s::Manager_sizeWindow()
 Config_hotkey=!^x::Manager_maximizeWindow()
 Config_hotkey=!^m::Manager_minimizeWindow()
@@ -132,9 +132,9 @@ Config_hotkey=!+i::Manager_getWindowList()
 
 ; Layout management
 ;Config_hotkey=!Tab::View_setLayout(-1)
-Config_hotkey=!f::View_setLayout(3)
-Config_hotkey=!m::View_setLayout(2)
-Config_hotkey=!t::View_setLayout(1)
+Config_hotkey=!+f::View_setLayout(3)
+Config_hotkey=!+m::View_setLayout(2)
+Config_hotkey=!+t::View_setLayout(1)
 Config_hotkey=!h::View_setLayoutProperty(MFactor, 0, -0.05)
 Config_hotkey=!l::View_setLayoutProperty(MFactor, 0, +0.05)
 Config_hotkey=!^t::View_setLayoutProperty(Axis, 0, +1, 1)
