Disabled toggle margins

--- a/Config.ini
+++ b/Config.ini
@@ -149,7 +149,7 @@ Config_hotkey=!+Left::View_setLayoutProperty(GapWidth, 0, -2)
 Config_hotkey=!+Right::View_setLayoutProperty(GapWidth, 0, +2)
 
 ;; View/Tag management
-Config_hotkey=!+n::View_toggleMargins()
+;Config_hotkey=!+n::View_toggleMargins()
 Config_hotkey=!BackSpace::Monitor_activateView(-1)
 Config_hotkey=!+0::Monitor_setWindowTag(10)
 Config_hotkey=!1::Monitor_activateView(1)
