--- a/Config.ini
+++ b/Config.ini
@@ -137,7 +137,7 @@ Config_hotkey=!+m::View_setLayout(2)
 Config_hotkey=!+t::View_setLayout(1)
 Config_hotkey=!^h::View_setLayoutProperty(MFactor, 0, -0.05)
 Config_hotkey=!^l::View_setLayoutProperty(MFactor, 0, +0.05)
-Config_hotkey=!^t::View_setLayoutProperty(Axis, 0, +1, 1)
+Config_hotkey=!^s::View_setLayoutProperty(Axis, 0, +1, 1)
 Config_hotkey=!^Enter::View_setLayoutProperty(Axis, 0, +2, 1)
 Config_hotkey=!^Tab::View_setLayoutProperty(Axis, 0, +1, 2)
 Config_hotkey=!^+Tab::View_setLayoutProperty(Axis, 0, +1, 3)
