changed date format

--- a/Config.ini
+++ b/Config.ini
@@ -27,7 +27,7 @@ Config_barCommands=Run, explore doc;Monitor_toggleBar();Main_reload();Reload;Exi
 Config_readinBat=0
 Config_readinCpu=0
 Config_readinDate=1
-Config_readinDateFormat=ddd, MMM d yyyy
+Config_readinDateFormat=ddd, M d yyyy
 Config_readinDiskLoad=0
 Config_readinMemoryUsage=0
 Config_readinNetworkLoad=0
