--- a/Config.ini
+++ b/Config.ini
@@ -53,7 +53,7 @@ Config_readinInterval=1500
 ;Config_layoutAxis_#1=1
 ;Config_layoutAxis_#2=2
 ;Config_layoutAxis_#3=2
-Config_layoutGapWidth=15
+Config_layoutGapWidth=0
 ;Config_layoutMFactor=0.6
 ;Config_areaTraceTimeout=1000
 ;Config_continuouslyTraceAreas=0
